# kubik

./: .gitignore  main.py  pyproject.toml
data/: config.py
det_mir/: card_type.html  config.py  create_files.py  models.py  parse.py  result.html
work_with_files/: file.py
