[project]
name = "kubik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "environs>=14.2.0",
    "fake-useragent>=2.2.0",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
